...
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp

const val BACK_BUTTON_TAG = "back_button"
const val INFO_BUTTON_TAG = "info_button"
const val TITLE_TEXT_TAG = "title_text"
const val PROFILE_BUTTON_TAG = "profile_button"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
...
